# ModToggler

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: App.test.tsx  App.tsx  bindings.ts  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: games.rs  integrity.rs  mod.rs  mods.rs  profiles.rs
src-tauri/src/db/: migrations.rs  queries.rs
src-tauri/src/services/: file_ops.rs  import.rs  journal.rs  mod.rs  profiles.rs  toggle.rs
src/components/: ConflictDialog.tsx  EmptyModView.tsx  FileMapTable.tsx  GameForm.tsx  GameSelector.test.tsx  GameSelector.tsx  ImportDialog.tsx  IntegrityAlert.test.tsx  IntegrityAlert.tsx  LooseImportDialog.tsx  ManageProfilesDialog.tsx  ModCard.tsx  ModList.tsx  ProfileDropdown.tsx  SaveProfileDialog.tsx  SettingsPanel.tsx  SubModOptions.tsx  UpdateBanner.test.tsx  UpdateBanner.tsx
src/hooks/: useGames.test.ts  useGames.ts  useIntegrityScan.ts  useMods.ts  useProfiles.ts  useUpdateChecker.test.ts  useUpdateChecker.ts
src/lib/: tauri.ts
src/store/: gameStore.test.ts  gameStore.ts  updateStore.test.ts  updateStore.ts
(+67 files in other folders)
