[package]
name = "modtoggler"
version = "0.1.0"
description = "A Tauri desktop app for managing game mods"
authors = ["you"]
edition = "2021"

[lib]
name = "modtoggler_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript"] }
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
